<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oáza.tv</string>
    <string name="app_version">1.2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="mainPage">Hlavní strana</string>
    <string name="connection_problem">Problém s připojením k internetu nebo na serveru Oáza.tv</string>
    <string name="newVideos">Nová videa</string>
    <string name="photoalbums">Fotoalba</string>
    <string name="description">null</string>
    <string name="title_activity_photoalbum">Fotoalbum</string>
    <string name="action_search">Vyhledávání</string>
    <string name="title_activity_audio_player">Audio přehrávač</string>
    <string name="title_activity_photoalbum_slideshow">Fotoalbum prezentace</string>
    <string name="download_audio">Stáhnout audio</string>
    <string name="downloading_audio">Stahuji audio...</string>
    <string name="download_complete">Stahování dokončeno</string>
    <string name="cancel_audio_download">zrušit stahování</string>
    <string name="error_downloading_audiofile">Stahování audio záznamu bylo zrušeno</string>
    <string name="downloading_audio_in_background">Audiozáznam se stahuje na pozadí</string>
    <string name="download_audiofile_completed">Stahování audiozáznamu dokončeno</string>
    <string name="already_downloaded">Již staženo</string>
    <string name="deleteAudio">Smazat audiozáznam</string>
    <string name="showOnlineVideo">Přejít na video</string>
    <string name="yes">Smazat</string>
    <string name="no">Zrušit</string>
    <string name="action_share">Sdílet</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="enter_fullscreen">Na celou obrazovku</string>
    <string name="landscape_fullscreen">Always fullscreen in landscape</string>
    <string name="already_downloading">Již se stahuje jiný audio záznam</string>
    <string name="connection_problem_home_title">Problém s připojením k internetu</string>
    <string name="offline_but_have_audio">...nevadí, máme přece stažené audio nahrávky!</string>
    <string name="offline_but_have_no_audio">... pro příště si stáhněte audio nahrávky pro offline poslech.</string>
    <string name="no_downloaded_audio">Nemáte stažené žádné audio záznamy, to bychom měli napravit!</string>
    <string name="no_downloaded_audio_help">Audio záznamy můžete stáhnout v přehrávači videí klepnutím na tuto ikonku:</string>
    <string name="no_broadcats_message">Právě neprobíhá žádné vysílání, zkuste to později.</string>
    <string name="share_live_player">Oáza.tv - živé vysílání</string>
    <string name="share_live_player_message">pro více informací navštivte http://oaza.tv</string>
    <string name="title_slide_1">Vítejte!\nProjdeme si pár základních věcí...\nPřipraveni?</string>
    <string name="title_slide_2_navigation">Navigace</string>
    <string name="title_slide_2">Veškerý obsah naleznete v levém menu.\n\n Vyhledávat můžete i pomocí tagů: #svoboda</string>
    <string name="title_slide_3_onthego">Na cestách...</string>
    <string name="title_slide_3">Stáhněte si audio záznamy\n a poslouchejte kdekoliv!</string>
    <string name="resuming_playback">Pokračuje se v přehrávání od poslední uložené pozice</string>
    <string name="downloaded_audio">Stažené audio</string>
    <string name="live_broadcast">Živý přenos</string>
    <string name="something_went_wrong">Něco se pokazilo</string>
    <string name="popularVideos">Populární videa</string>

</resources>
